# Aurio

./: .clang-format  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  main.c
src/Lib/FIR/: LibFir.c  LibFir.h
src/Lib/Module/: LibModule.c  LibModule.h  LibModuleCfg.h  LibModuleTypes.h
src/Lib/Ret/: LibRet.h
src/LibRet/: LibRet.h
tests/: CMakeLists.txt  main.c
