file(GLOB_RECURSE AURIO_SRCS_AND_DIRS LIST_DIRECTORIES true *.c)
file(GLOB_RECURSE AURIO_HDRS_AND_DIRS LIST_DIRECTORIES true *.h)

foreach(ELEMENT IN LISTS AURIO_SRCS_AND_DIRS)
    if(IS_DIRECTORY "${ELEMENT}")
        list(APPEND AURIO_INCLUDE_DIRS "${ELEMENT}")
    elseif(EXISTS "${ELEMENT}")
        file(RELATIVE_PATH ELEMENT ${CMAKE_CURRENT_SOURCE_DIR} ${ELEMENT})
        list(APPEND AURIO_SRCS ${ELEMENT})
    endif()
endforeach(ELEMENT)

foreach(ELEMENT IN LISTS AURIO_HDRS_AND_DIRS)
    if(IS_DIRECTORY "${ELEMENT}")
        list(APPEND AURIO_INCLUDE_DIRS "${ELEMENT}")
    elseif(EXISTS "${ELEMENT}")
        file(RELATIVE_PATH ELEMENT ${CMAKE_CURRENT_SOURCE_DIR} ${ELEMENT})
        list(APPEND AURIO_HDRS ${ELEMENT})
    endif()
endforeach(ELEMENT)

include_directories(${AURIO_INCLUDE_DIRS})
add_executable(aurio ${AURIO_SRCS} ${AURIO_HDRS})