file(GLOB_RECURSE AURIO_SRCS_AND_DIRS LIST_DIRECTORIES true Lib/*.c)
file(GLOB_RECURSE AURIO_HDRS_AND_DIRS LIST_DIRECTORIES true Lib/*.h)

foreach(ELEMENT IN LISTS AURIO_SRCS_AND_DIRS)
    if(IS_DIRECTORY "${ELEMENT}")
        list(APPEND AURIO_INCLUDE_DIRS "${ELEMENT}")
    elseif(EXISTS "${ELEMENT}")
        file(RELATIVE_PATH ELEMENT ${CMAKE_CURRENT_SOURCE_DIR} ${ELEMENT})
        list(APPEND AURIO_SRCS ${ELEMENT})
    endif()
endforeach(ELEMENT)

foreach(ELEMENT IN LISTS AURIO_HDRS_AND_DIRS)
    if(IS_DIRECTORY "${ELEMENT}")
        list(APPEND AURIO_INCLUDE_DIRS "${ELEMENT}")
    elseif(EXISTS "${ELEMENT}")
        file(RELATIVE_PATH ELEMENT ${CMAKE_CURRENT_SOURCE_DIR} ${ELEMENT})
        list(APPEND AURIO_HDRS ${ELEMENT})
    endif()
endforeach(ELEMENT)

add_library(auril STATIC ${AURIO_SRCS} ${AURIO_HDRS})
target_include_directories(auril PUBLIC ${AURIO_INCLUDE_DIRS})
target_compile_options(auril PRIVATE -Werror -Wall -Wpedantic -Wextra -Wno-unused-parameter -Wuninitialized)

add_executable(aurio main.c)
target_link_libraries(aurio PUBLIC auril)
